2006-01-25  Guillaume Smet <guillaume-pg@smet.org>
	
	* fixed a missing reference to $logStream in LogBlock
	* removed useless code from LogStream
	* fixed html output method of errors report

2006-01-24  Guillaume Smet <guillaume-pg@smet.org>

	* fixed a bug on duration if log_duration and log_min_duration_statement
	are set to true in the new parser (duration counted twice)
	* minor fix in command line help

2006-01-11  Guillaume Smet <guillaume-pg@smet.org>

	* it is now possible to generate several reports with only one parse
	* we now check that GD2 extension is available if we use the
	HTML with graphs format
	* merged 0.2 branch (0.2.1) into HEAD

2006-01-10  Guillaume Smet <guillaume-pg@smet.org>

	* [0.2] fixed a bug on duration if log_duration was set to true
	submitted by David Link
	* [0.2] improved the sort in normalized queries reports
	* [0.2] released 0.2.1

2005-12-25  Guillaume Smet <guillaume-pg@smet.org>

	* rewrote large parts of the parser to fix various problems
	* added the ability to take into account duration only log lines

2005-12-22  Guillaume Smet <guillaume-pg@smet.org>

	* more work on graphs
	* tagged RELEASE_0_3 even if it is not an official release
	before major parser changes

2005-12-21  Guillaume Smet <guillaume-pg@smet.org>

	* worked on graphs for hourly reports
	* added all the command line stuff to manage graphs

2005-12-20  Guillaume Smet <guillaume-pg@smet.org>

	* added Artichow library to draw graphs

2005-12-19  Guillaume Smet <guillaume-pg@smet.org>

	* applied patch from Laurent Almeras to add -from and -to
	options (ability to filter on timestamps)
	* worked on hourly statistics (no pretty output yet)

2005-12-18  Guillaume Smet <guillaume-pg@smet.org>

	* enhanced the syslog parser to get log line timestamps
	* added the ability to get the timestamp of a query

2005-12-16  Guillaume Smet <guillaume-pg@smet.org>

	* fixed a few bugs
	* released 0.2

2005-11-28  Guillaume Smet <guillaume-pg@smet.org>
